--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "lodash": "^4.17.14",
+    "npm-check": "^5.9.0",
     "uuid": "^3.3.2",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1"
